Updated localization and improved gui scaling

--- a/Config/Localization/Launcher_Gather.ini
+++ b/Config/Localization/Launcher_Gather.ini
@@ -8,6 +8,7 @@ ManifestName=Launcher.manifest
 ArchiveName=Launcher.archive
 NativeCulture=en
 CulturesToGenerate=en
+CulturesToGenerate=pl
 
 [GatherTextStep0]
 CommandletClass=GatherTextFromSource
