--- a/Config/Localization/Launcher_Export.ini
+++ b/Config/Localization/Launcher_Export.ini
@@ -1,9 +1,11 @@
-;METADATA=(Diff=true, UseCommands=true)
+; THESE ARE GENERATED FILES, DO NOT EDIT DIRECTLY!
+; USE THE LOCALIZATION DASHBOARD IN THE UNREAL EDITOR TO EDIT THE CONFIGURATION
 [CommonSettings]
 SourcePath=Content/Localization/Launcher
 DestinationPath=Content/Localization/Launcher
 NativeCulture=en
 CulturesToGenerate=en
+CulturesToGenerate=pl
 ManifestName=Launcher.manifest
 ArchiveName=Launcher.archive
 PortableObjectName=Launcher.po
