--- a/Config/Localization/Launcher_Gather.ini
+++ b/Config/Localization/Launcher_Gather.ini
@@ -1,7 +1,7 @@
 ;METADATA=(Diff=true, UseCommands=true)
 [CommonSettings]
-ManifestDependencies=../../ssd-software/NierealnySilnik55/Engine/Content/Localization/Engine/Engine.manifest
-ManifestDependencies=../../ssd-software/NierealnySilnik55/Engine/Content/Localization/Editor/Editor.manifest
+ManifestDependencies=../../../../mnt/ssd-software/NierealnySilnik55/Engine/Content/Localization/Engine/Engine.manifest
+ManifestDependencies=../../../../mnt/ssd-software/NierealnySilnik55/Engine/Content/Localization/Editor/Editor.manifest
 SourcePath=Content/Localization/Launcher
 DestinationPath=Content/Localization/Launcher
 ManifestName=Launcher.manifest
